# deep-gvr

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PLANS.md  QUALITY_SCORE.md  README.md  SKILL.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
adapters/: __init__.py  analysis_utils.py  base_adapter.py  dynamics_adapter.py  mbqc_graph_state_adapter.py  neutral_atom_control_adapter.py  optimization_adapter.py  photonic_linear_optics_adapter.py  qec_decoder_benchmark_adapter.py  registry.py  stim_adapter.py  symbolic_math_adapter.py  topological_qec_design_adapter.py  zx_rewrite_verification_adapter.py
codex_automations/: README.md  catalog.json
codex_skill/: SKILL.md
codex_ssh_devbox/: catalog.json
codex_subagents/: catalog.json
docs/: README.md  architecture-status.md  backend-parity-matrix.md  capability-probes.md  codex-automations.md  codex-local.md  codex-plugin.md  codex-review-qa.md  codex-ssh-devbox.md  codex-subagents.md  concepts.md  contracts-and-artifacts.md  deep-gvr-architecture.md  domain-portfolio.md  examples.md  faq.md  golden-principles.md  index.md  plugin-privacy.md  plugin-terms.md  quickstart.md  release-workflow.md  start-here.md  system-overview.md  tier2-tier3-support-matrix.md
domain/: dynamics_context.md  fbqc_context.md  known_results.md  math_context.md  mbqc_context.md  neutral_atom_context.md  optimization_context.md  photonic_context.md  qec_context.md
eval/: README.md  known_problems.json  run_eval.py
plans/: 00-repo-bootstrap.md  01-capability-probes.md  02-core-contracts.md  03-tier1-loop.md  04-tier2-stim.md  05-tier3-aristotle.md  06-cross-model-routing.md  07-eval-release.md  08-live-eval.md  09-skill-integration.md  (+70 more)
(+145 files in other folders)
