[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-gvr"
version = "0.1.0"
description = "Readiness scaffolding and contracts for the deep-gvr Hermes research harness."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Zetetic Works Research Corporation" }]
dependencies = [
    "pymatching>=2.3.1",
    "pyyaml>=6.0.3",
    "stim>=1.15.0",
]

[project.scripts]
deep-gvr = "deep_gvr.cli:main"

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
testpaths = ["tests"]
